--- a/Ejercicios4Formularios/binario.html
+++ b/Ejercicios4Formularios/binario.html
@@ -8,7 +8,7 @@
 <form name='binario' action='binario.php' method='POST'>
 
 Numero decimal:
-<input type='text' name='numero_decimal' value=''><br><br>
+<input type='number' name='numero_decimal' value=''><br><br>
 
 <input type="submit" value="enviar">
 
